# nexus

./: API.md  BACKLOG.md  CLAUDE.md  DEPLOYMENT.md  DEVELOPMENT_PLAN.md  DEVELOPMENT_REPORT.md  Dockerfile  IMPLEMENTATION_REPORT.md  README.md  ROADMAP.md  STAGING.md  __init__.py  agents.md  base.py  conftest.py  database.py  docker-compose.yml  identity.py  issues.py  pyproject.toml  requirements.txt  schema.md
agileai/: __init__.py
agileai/api/: __init__.py  dependencies.py  main.py
agileai/api/routers/: __init__.py  auth.py  backlog.py
agileai/client/: __init__.py  async_client.py  exceptions.py  sync_client.py
agileai/models/: __init__.py
agileai/schemas/: auth.py  backlog.py
agileai/services/backlog/: __init__.py  domain.py  estimation.py  exceptions.py  prioritization.py  readiness.py  service.py
agileai/web/: __init__.py  admin.py  routes.py
agileai/web/static/css/: style.css
agileai/web/templates/: base.html  index.html
agileai/web/templates/auth/: login.html  register.html
agileai/web/templates/backlog/: list.html
alembic/versions/: 0002_add_backlog_rank_to_issues.py
docs/: AGENTS_PLAYBOOK.md  ARCHITECTURE.md  BOARD.md  PROJECT_LOG.md  SPRINT_01.md  WORKFLOW.md
tests/: __init__.py  test_backlog.py
