[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "agileai"
version = "0.1.0"
description = "Local-first AI-native Agile project management platform"
requires-python = ">=3.11"
dependencies = [
    # Core API
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0",

    # Database
    "sqlalchemy>=2.0.30",
    "aiosqlite>=0.20.0",
    "alembic>=1.13.0",

    # Auth & Security
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.9",

    # AI - External
    "anthropic>=0.28.0",
    "httpx>=0.27.0",

    # AI - Local
    "ollama>=0.2.0",
    "numpy>=1.26.0",

    # CLI
    "typer>=0.12.0",
    "rich>=13.7.0",

    # TUI
    "textual>=0.61.0",
    "aiosqlite>=0.20.0",

    # Telegram
    "python-telegram-bot>=21.0",

    # Scheduling & Jobs
    "apscheduler>=3.10.0",

    # Utilities
    "python-dotenv>=1.0.0",
    "click>=8.1.0",
    "tabulate>=0.9.0",
    "python-dateutil>=2.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "black>=24.4.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]
desktop = [
    "PyQt6>=6.7.0",
]

[project.scripts]
agileai = "agileai.cli.main:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["agileai*"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
